# Workflow-Executor

./: CMakeLists.txt  main.cpp
blocks/: Block.cpp  Block.h  Creator.cpp  Creator.h
blocks/concrete_blocks/: GrepBlock.cpp  ReadFileBlock.cpp  ReadFileBlock.h  ReplaceBlock.cpp  ReplaceBlock.h
blocks/creators/: ReadFileCreator.cpp  ReadFileCreator.h
config/: Config.cpp  Config.h
config/exceptions/: BorderException.cpp  BorderException.h
exceptions/: FileNotFoundException.cpp  FileNotFoundException.h
helpers/: LineHelper.cpp  LineHelper.h  RegexHelper.cpp  RegexHelper.h  StringHelper.cpp
